# django-app

./: .env  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/mysite/: settings.py
nginx/: default.conf  nginx.conf
